--- a/backend/package.json
+++ b/backend/package.json
@@ -20,9 +20,12 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^10.0.0",
+    "@nestjs/common": "^10.3.3",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "axios": "^1.6.7",
+    "pokedex-promise-v2": "^4.2.0",
+    "python-shell": "^5.0.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
